--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+
+
 body {
   background:#f3f3f3;
 }
@@ -11,9 +14,17 @@ a {
   color: #e74c3c !important;
 }
 
+
 button:focus {
   outline: none;
 }
+
+button:hover {
+  background: #FBF0F0  ;
+}
+
+
+/***********APP************/
 
 .App {
   text-align: center;
@@ -21,15 +32,29 @@ button:focus {
 
 .App-header {
   background-color: #2c3e50;
-  height: 90px;
-  padding: 30px;
-  color: white;
+  height: 25%;
+  padding: 0;
   margin-bottom: 2rem;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 5em;
+  font-weight: 900;
+  padding: 20px;
+  position: relative;
+  color: #00acee;
+  font-family: 'Concert One', cursive;
+  z-index: 1;
 }
+
+.App-title::before {
+  content: "Yummy Recipes";
+  position: absolute;
+  top: 15px;
+  color: white;
+}
+
+
 
 .recipe__buttons {
   border: solid 2px #e74c3c;
@@ -89,7 +114,7 @@ button:focus {
 
 .form__button {
   border: solid 2px #e74c3c;
-  background: transparent;
+  background: #fff;
   padding: 0.2rem 0.9rem;
   margin: 0 0.2rem;
   border-radius: 1px;
